<resources>
    <!--供Facebook登入模組使用-->
    <string name="facebook_application_id">538484070690621</string>
    <string name="facebook_app_id">538484070690621</string>
    <string name="fb_login_protocol_scheme">fb538484070690621</string>


    <string name="app_name">SelfStudy</string>

    <string name="activity_menu_book">我的題庫</string>
    <string name="activity_menu_recent">最近單字</string>
    <string name="activity_menu_mark">標記單字</string>
    <string name="activity_menu_archive">封存</string>
    <string name="activity_menu_recycler">回收桶</string>
    <string name="activity_menu_theme">主題</string>
    <string name="activity_menu_setting">設置</string>
    <string name="activity_menu_suggest">意見回饋</string>

    <string name="hint_search_word">搜尋英文字典</string>

    <string name="icon_pronounce">發音</string>
    <string name="icon_search">搜尋</string>
    <string name="icon_search_local">搜尋本地單字</string>
    <string name="icon_test">測驗</string>
    <string name="icon_background">切換背景</string>
    <string name="icon_send">保存</string>
    <string name="icon_save">保存</string>
    <string name="icon_done">完成</string>
    <string name="icon_to_list">編輯題庫</string>
    <string name="icon_import_word">匯入</string>
    <string name="icon_mark">標記</string>
    <string name="icon_cancel_mark">已標記</string>
    <string name="icon_add_book">新增題庫</string>
    <string name="icon_download_book">匯入題庫</string>

    <string name="FAB_mark">標記</string>
    <string name="FAB_cancel_mark">已標記</string>
    <string name="FAB_delete">刪除</string>
    <string name="FAB_edit">編輯</string>
    <string name="FAB_add">新增</string>
    <string name="FAB_main">點擊小按鈕進行操作</string>
    <string name="FAB_add_word">新增單字</string>
    <string name="FAB_add_book">新增題庫</string>


    <string name="title_translation">釋義</string>
    <string name="title_variation">變化形</string>
    <string name="title_example">例句</string>
    <string name="title_note">註記</string>

    <string name="label_word">Word</string>
    <string name="label_pronunciation">Pronunciation</string>
    <string name="label_translation">Translation</string>
    <string name="label_variation">Variation</string>
    <string name="label_example">Example</string>
    <string name="label_note">Note</string>
    <string name="label_sound">Sound</string>

    <string name="hint_input_word">i.e. particular</string>
    <string name="hint_input_pronunciation">i.e. [pɚˋtɪkjəlɚ]</string>
    <string name="hint_input_translation">i.e. adj.特別的, 細緻的 n.細目"</string>
    <string name="hint_input_variation">i.e. 名詞複數：particulars</string>
    <string name="hint_input_example">
"adj.形容詞
1.特殊的；特定的；特別的[Z][B]
The teacher showed particular concern for the disabled child.
老師特別關心那個殘疾兒童。
2.特有的，獨特的；異常的[Z][B]
Her particular way of smiling left a good impression on me.
她特有的微笑給我留下了美好的印象。

n.名詞
1.個別的項目，細目[C]
The particular may have to be satisfied to the general.
為顧全總體個別的項目也許不得不放棄。"
    </string>
    <string name="hint_input_note">i.e. particular有兩種意思, 可以簡單記為: 特別的細目</string>
    <string name="hint_input_sound">"0:00 / 0:00"</string>


    <string name="helper_text_word">"輸入單字或片語    *Required"</string>
    <string name="helper_text_pronunciation">可自動取得音標</string>
    <string name="helper_text_translation">輸入翻譯</string>
    <string name="helper_text_variation">輸入變化形</string>
    <string name="helper_text_example">輸入例句</string>
    <string name="helper_text_note">輸入註記</string>
    <string name="helper_text_sound">可自動取得發音</string>

    <string name="toast_success_mark">標記成功</string>
    <string name="toast_cancel_mark">取消標記</string>
    <string name="toast_exit_app">再按一次離開程式</string>

    <string name="button_reset"><u>Reset</u></string>


    <string name="search_fragment_search_word">搜尋單字</string>
</resources>