<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/bookFragment"
            android:icon="@drawable/ic_baseline_bookmark_24"
            android:title="@string/activity_menu_book" />

        <item
            android:id="@+id/recentWordFragment"
            android:icon="@drawable/ic_baseline_access_time_24"
            android:title="@string/activity_menu_recent" />

        <item
            android:id="@+id/markFragment"
            android:icon="@drawable/ic_baseline_star_24"
            android:title="@string/activity_menu_mark" />

        <item
            android:id="@+id/archiveFragment"
            android:icon="@drawable/ic_baseline_archive_24"
            android:title="@string/activity_menu_archive" />

        <item
            android:id="@+id/themeFragment"
            android:icon="@drawable/ic_round_color_lens_24"
            android:title="@string/activity_menu_theme" />
        <item
            android:id="@+id/settingFragment"
            android:icon="@drawable/ic_round_settings_24"
            android:title="@string/activity_menu_setting" />

        <item
            android:id="@+id/suggestFragment"
            android:icon="@drawable/ic_baseline_comment_24"
            android:title="@string/activity_menu_suggest" />
    </group>
</menu>
