<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/icon_search"
        app:iconTint="?attr/primary_icon_tint"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/addBookFragment"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/icon_add_book"
        app:showAsAction="never"/>

    <item
        android:id="@+id/dialogChooseLocalBook"
        android:icon="@drawable/ic_baseline_archive_24"
        android:title="@string/icon_download_book"
        app:showAsAction="never"/>

    <!--
    <item
        android:id="@+id/searchLocalFragment"
        android:icon="@drawable/ic_baseline_manage_search_24"
        android:title="@string/icon_search_local"
        app:showAsAction="never"/>-->
</menu>